--- a/Bamoka.css
+++ b/Bamoka.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    scrollbar-width: none;
 }
 
 .nave{
@@ -40,4 +41,62 @@
     height: 590px;
     width: 1535px;
     z-index: -1;
+}
+
+.center{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    padding: 90px;
+}
+
+.name{
+    margin-top: 80px;
+    font-weight: bold;
+    font-size: 100px;
+}
+
+.manu{
+    margin-top: 20px;
+    font-weight:bold;
+    font-size: 30px;
+}
+
+.contact-us-btn{
+    background-color: rgba(27, 27, 27, 0.3);
+    border: 1px solid rgba(63, 101, 10, 0.5);
+    color: white;
+    padding: 13px 40px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: bolder;
+    margin-top: 40px;
+}
+
+.contact-us-btn:hover {
+    background-color: rgb(0, 0, 0);
+    opacity: 100%;
+}
+
+.ignite{
+    margin-top: 50px;
+    font-size: 28px;
+    font-weight:500;
+    color: #FFFFFF;
+}
+
+.container-1{
+    margin-top: 60px;
+}
+
+.wel{
+    font-size:larger;
+    font-weight: 700;
+    font-size: 70px;
+}
+
+.to{
+    font-size:large;
+    font-weight: 500;
 }
