--- a/Bamoka.css
+++ b/Bamoka.css
@@ -265,14 +265,66 @@
 
 .main-card{
     position: relative;
+    perspective: 1000px;
     overflow: hidden;
     border-radius: 8px;
 }
 
-.main-card img{
+.flip-card{
+    width: 395px;
+    height: 250px;
+    position: relative;
+}
+
+.flip-card-inner{
+    position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner{
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+}
+
+.flip-card-front img{
     display: block;
+    border-radius: 8px;
+}
+
+.flip-card-back{
+    background-color: #f4f4f4;
+    color: #000;
+    transform: rotateY(180deg);
+    padding: 20px;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.para1{
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.para2{
+    font-size: 18px;
 }
 
 .container-4{
@@ -442,11 +494,19 @@
     height: 30px;
 }
 
+.social-logo:hover{
+    opacity: 50%;
+}
+
 .footer-text{
     flex: 1;
     color: #c6d5af;
     font-size: 18px;
     line-height: 2;
+}
+
+.footer-text p:hover{
+    color: #3F650A;
 }
   
 .footer-text span{
